# CalculiX-cmake

./: CMakeLists.txt
src/: cascade.c  spooles.h
src/fortran/: add_sm_fl.f  friction_coefficient.f  limit_case_calc.f  patch.f  pt2_lim_calc.f
