cmake_minimum_required(VERSION 2.8)

project(CalculiX C Fortran) 

add_definitions(-DARCH=1 -DSPOOLES -DARPACK -DMATRIXSTORAGE)

option(USE_MT "Use multithreads." ON)
if(USE_MT)
# FindOpenMP
  find_package(OpenMP)
  if(OPENMP_FOUND)
    message(STATUS "Enabling Multithreading")
    add_definitions(-DUSE_MT=1)
    set(CMAKE_CXX_FLAGS ${OpenMP_CXX_FLAGS} ${CMAKE_CXX_FLAGS})
    set(CMAKE_C_FLAGS ${OpenMP_C_FLAGS} ${CMAKE_C_FLAGS})
    set(CMAKE_Fortran_FLAGS ${OpenMP_C_FLAGS} ${CMAKE_Fortran_FLAGS})
  endif(OPENMP_FOUND)
endif(USE_MT)

# FindPthread

set(FORTRAN_SRCS
  src/fortran/absolute_relative.f
  src/fortran/acctube.f
  src/fortran/acctube_one.f
  src/fortran/add_bo_st.f
  src/fortran/add_sm_ei.f
  src/fortran/add_sm_fl.f
  src/fortran/add_sm_st.f
  src/fortran/add_sm_st_as.f
  src/fortran/add_sm_st_corio.f
  src/fortran/addimd.f
  src/fortran/addimdnodecload.f
  src/fortran/addimdnodedload.f
  src/fortran/addimdnodedof.f
  src/fortran/addizdofcload.f
  src/fortran/addizdofdload.f
  src/fortran/adjustcontactnodes.f
  src/fortran/advecforc.f
  src/fortran/advecstiff.f
  src/fortran/allocation.f
  src/fortran/allocont.f
  src/fortran/amplitudes.f
  src/fortran/angsum.f
  src/fortran/anisonl.f
  src/fortran/anisotropic.f
  src/fortran/applyboun.f
  src/fortran/approxplane.f
  src/fortran/assigndomtonodes.f
  src/fortran/attach.f
  src/fortran/attach_3d.f
  src/fortran/attachline.f
  src/fortran/basis.f
  src/fortran/beamsections.f
  src/fortran/biotsavart.f
  src/fortran/bodyadd.f
  src/fortran/bodyforce.f
  src/fortran/bounadd.f
  src/fortran/boundarys.f
  src/fortran/bounrem.f
  src/fortran/bsort.f
  src/fortran/buckles.f
  src/fortran/calc_ider_cross_split.f
  src/fortran/calc_ider_tee.f
  src/fortran/calc_ider_wye.f
  src/fortran/calc_residual_cross_split.f
  src/fortran/calc_residual_tee.f
  src/fortran/calc_residual_wye.f
  src/fortran/calcbody.f
  src/fortran/calcdvifa.f
  src/fortran/calceigenvalues.f
  src/fortran/calcgradpp.f
  src/fortran/calcgradv.f
  src/fortran/calcmac.f
  src/fortran/calcmass.f
  src/fortran/calcppel.f
  src/fortran/calcrhoel.f
  src/fortran/calcrhofa.f
  src/fortran/calcvel.f
  src/fortran/calcview.f
  src/fortran/calinput.f
  src/fortran/carbon_seal.f
  src/fortran/cd_Mcgreehan_Schotsch.f
  src/fortran/cd_bleedtapping.f
  src/fortran/cd_bragg.f
  src/fortran/cd_chamfer.f
  src/fortran/cd_lab_1spike.f
  src/fortran/cd_lab_correction.f
  src/fortran/cd_lab_honeycomb.f
  src/fortran/cd_lab_radius.f
  src/fortran/cd_lab_straight.f
  src/fortran/cd_lichtarowicz.f
  src/fortran/cd_ms_ms.f
  src/fortran/cd_own_albers.f
  src/fortran/cd_pk_albers.f
  src/fortran/cd_pk_ms.f
  src/fortran/cd_preswirlnozzle.f
  src/fortran/cflux.f
  src/fortran/cfluxs.f
  src/fortran/changedepterm.f
  src/fortran/changefrictions.f
  src/fortran/changekon.f
  src/fortran/changematerials.f
  src/fortran/changeplastics.f
  src/fortran/characteristic.f
  src/fortran/checktemp.f
  src/fortran/checktime.f
  src/fortran/chksurf.f
  src/fortran/cident.f
  src/fortran/cident20.f
  src/fortran/clearances.f
  src/fortran/cload.f
  src/fortran/cloads.f
  src/fortran/closefile.f
  src/fortran/closefilefluid.f
  src/fortran/complexfrequencys.f
  src/fortran/conductivitys.f
  src/fortran/contactdampings.f
  src/fortran/contactpairs.f
  src/fortran/contactprints.f
  src/fortran/controlss.f
  src/fortran/coriolissolve.f
  src/fortran/coupledtemperaturedisplacements.f
  src/fortran/cp_corrected.f
  src/fortran/createinterfacempcs.f
  src/fortran/createinum.f
  src/fortran/createmddof.f
  src/fortran/createmdelem.f
  src/fortran/createtiedsurfs.f
  src/fortran/creep.f
  src/fortran/creeps.f
  src/fortran/cross_split.f
  src/fortran/cubic.f
  src/fortran/cubtri.f
  src/fortran/cyclichardenings.f
  src/fortran/cyclicsymmetrymodels.f
  src/fortran/dKdX.f
  src/fortran/dKdm.f
  src/fortran/dKdp.f
  src/fortran/dKdt.f
  src/fortran/dashdamp.f
  src/fortran/dashforc.f
  src/fortran/dashpots.f
  src/fortran/dattime.f
  src/fortran/ddeabm.f
  src/fortran/ddebdf.f
  src/fortran/deformationplasticitys.f
  src/fortran/defplas.f
  src/fortran/delaun.f
  src/fortran/deltri.f
  src/fortran/densitys.f
  src/fortran/depvars.f
  src/fortran/deuldlag.f
  src/fortran/dflux.f
  src/fortran/dfluxs.f
  src/fortran/dgesv.f
  src/fortran/distattach.f
  src/fortran/distattach_3d.f
  src/fortran/distattachline.f
  src/fortran/distributingcouplings.f
  src/fortran/dload.f
  src/fortran/dloads.f
  src/fortran/dlz.f
  src/fortran/dqag.f
  src/fortran/drfftf.f
  src/fortran/dsort.f
  src/fortran/dynamic_viscosity.f
  src/fortran/dynamics.f
  src/fortran/dynresults.f
  src/fortran/e_c3d.f
  src/fortran/e_c3d_em.f
  src/fortran/e_c3d_rhs.f
  src/fortran/e_c3d_rhs_th.f
  src/fortran/e_c3d_th.f
  src/fortran/e_corio.f
  src/fortran/e_damp.f
  src/fortran/edg.f
  src/fortran/el.f
  src/fortran/elastics.f
  src/fortran/electricalconductivitys.f
  src/fortran/electromagneticss.f
  src/fortran/elementpernode.f
  src/fortran/elements.f
  src/fortran/elprints.f
  src/fortran/envtemp.f
  src/fortran/eplane.f
  src/fortran/equationcheck.f
  src/fortran/equations.f
  src/fortran/errorestimator.f
  src/fortran/evalshapefunc.f
  src/fortran/expansions.f
  src/fortran/extrapolate.f
  src/fortran/extrapolate_ad.f
  src/fortran/extrapolate_gradv.f
  src/fortran/extrapolate_p.f
  src/fortran/extrapolate_pp.f
  src/fortran/extrapolate_v.f
  src/fortran/extrapolatecontact.f
  src/fortran/faceinfo.f
  src/fortran/faceprints.f
  src/fortran/fcrit.f
  src/fortran/fillknotmpc.f
  src/fortran/film.f
  src/fortran/films.f
  src/fortran/findsurface.f
  src/fortran/flowoutput.f
  src/fortran/flowresult.f
  src/fortran/fluidconstantss.f
  src/fortran/fluidsections.f
  src/fortran/flux.f
  src/fortran/forcadd.f
  src/fortran/forcesolve.f
  src/fortran/frditeration.f
  src/fortran/frequencys.f
  src/fortran/friction_coefficient.f
  src/fortran/frictions.f
  src/fortran/fsub.f
  src/fortran/fsuper.f
  src/fortran/gapcon.f
  src/fortran/gapconductances.f
  src/fortran/gaps.f
  src/fortran/gasmechbc.f
  src/fortran/gaspipe.f
  src/fortran/gaspipe_fanno.f
  src/fortran/gen3dboun.f
  src/fortran/gen3dconnect.f
  src/fortran/gen3delem.f
  src/fortran/gen3dforc.f
  src/fortran/gen3dfrom1d.f
  src/fortran/gen3dfrom2d.f
  src/fortran/gen3dmpc.f
  src/fortran/gen3dnor.f
  src/fortran/gen3dprop.f
  src/fortran/gen3dsurf.f
  src/fortran/gen3dtemp.f
  src/fortran/genadvecelem.f
  src/fortran/gencontelem_f2f.f
  src/fortran/gencontelem_n2f.f
  src/fortran/generatecycmpcs.f
  src/fortran/generateeminterfaces.f
  src/fortran/generatetet.f
  src/fortran/genmodes.f
  src/fortran/gennactdofinv.f
  src/fortran/gentiedmpc.f
  src/fortran/geomview.f
  src/fortran/getnewline.f
  src/fortran/getnodel.f
  src/fortran/hcrit.f
  src/fortran/headings.f
  src/fortran/heattransfers.f
  src/fortran/hgforce.f
  src/fortran/hgstiffness.f
  src/fortran/hns.f
  src/fortran/hybsvd.f
  src/fortran/hyperelastics.f
  src/fortran/hyperfoams.f
  src/fortran/ident.f
  src/fortran/ident2.f
  src/fortran/identamta.f
  src/fortran/identifytiedface.f
  src/fortran/includefilename.f
  src/fortran/incplas.f
  src/fortran/init.f
  src/fortran/initialcfd.f
  src/fortran/initialchannel.f
  src/fortran/initialconditionss.f
  src/fortran/initialnet.f
  src/fortran/inputerror.f
  src/fortran/inputinfo.f
  src/fortran/inputwarning.f
  src/fortran/integral_boundary.f
  src/fortran/interpol_alfa2.f
  src/fortran/interpolate_v.f
  src/fortran/interpolateinface.f
  src/fortran/interpolatestate.f
  src/fortran/interpolsubmodel.f
  src/fortran/intersectionpoint.f
  src/fortran/islavactive.f
  src/fortran/isorti.f
  src/fortran/isortid.f
  src/fortran/isortiddc.f
  src/fortran/isortii.f
  src/fortran/isortiid.f
  src/fortran/isortiiddc.f
  src/fortran/keystart.f
  src/fortran/knotmpc.f
  src/fortran/lab_straight_ppkrit.f
  src/fortran/labyrinth.f
  src/fortran/limit_case_calc.f
  src/fortran/linel.f
  src/fortran/linkdissimilar.f
  src/fortran/linscal.f
  src/fortran/lintemp.f
  src/fortran/lintemp_th.f
  src/fortran/linvec.f
  src/fortran/liquidchannel.f
  src/fortran/liquidpipe.f
  src/fortran/liquidpump.f
  src/fortran/loadadd.f
  src/fortran/loadaddp.f
  src/fortran/loadaddt.f
  src/fortran/machpi.f
  src/fortran/mafillcorio.f
  src/fortran/mafilldm.f
  src/fortran/mafillem.f
  src/fortran/mafillnet.f
  src/fortran/mafillp.f
  src/fortran/mafillppprhs.f
  src/fortran/mafillsm.f
  src/fortran/mafillsmas.f
  src/fortran/mafillsmcs.f
  src/fortran/mafillsmcsas.f
  src/fortran/magneticpermeabilitys.f
  src/fortran/map3dto1d2d.f
  src/fortran/map3dto1d2d_v.f
  src/fortran/map3dtolayer.f
  src/fortran/materialdata_cond.f
  src/fortran/materialdata_cp.f
  src/fortran/materialdata_cp_sec.f
  src/fortran/materialdata_dvi.f
  src/fortran/materialdata_em.f
  src/fortran/materialdata_me.f
  src/fortran/materialdata_rho.f
  src/fortran/materialdata_sp.f
  src/fortran/materialdata_tg.f
  src/fortran/materialdata_th.f
  src/fortran/materials.f
  src/fortran/mechmodel.f
  src/fortran/modaldampings.f
  src/fortran/modaldynamics.f
  src/fortran/modelchanges.f
  src/fortran/modf.f
  src/fortran/moehring.f
  src/fortran/mpcrem.f
  src/fortran/mpcs.f
  src/fortran/mult.f
  src/fortran/multistages.f
  src/fortran/near2d.f
  src/fortran/near3d.f
  src/fortran/neartriangle.f
  src/fortran/networkextrapolate.f
  src/fortran/networkforc.f
  src/fortran/networkinum.f
  src/fortran/networkstiff.f
  src/fortran/newton.f
  src/fortran/nident.f
  src/fortran/nident2.f
  src/fortran/nidentk.f
  src/fortran/nidentll.f
  src/fortran/noanalysiss.f
  src/fortran/nodalthicknesss.f
  src/fortran/nodeprints.f
  src/fortran/nodes.f
  src/fortran/nodestiedface.f
  src/fortran/noelfiles.f
  src/fortran/noelsets.f
  src/fortran/nonlinmpc.f
  src/fortran/normals.f
  src/fortran/normalsoninterface.f
  src/fortran/norshell3.f
  src/fortran/norshell4.f
  src/fortran/norshell6.f
  src/fortran/norshell8.f
  src/fortran/onedint.f
  src/fortran/op.f
  src/fortran/op_corio.f
  src/fortran/opas.f
  src/fortran/openfile.f
  src/fortran/openfilefluid.f
  src/fortran/orientations.f
  src/fortran/orifice.f
  src/fortran/orthonl.f
  src/fortran/orthotropic.f
  src/fortran/outputs.f
  src/fortran/patch.f
  src/fortran/physicalconstantss.f
  src/fortran/pk_cdc_cl1.f
  src/fortran/pk_cdc_cl3.f
  src/fortran/pk_cdc_cl3a.f
  src/fortran/pk_cdc_cl3b.f
  src/fortran/pk_cdc_cl3d.f
  src/fortran/pk_cdi_noz.f
  src/fortran/pk_cdi_r.f
  src/fortran/pk_cdi_rl.f
  src/fortran/pk_cdi_se.f
  src/fortran/pk_y0_yg.f
  src/fortran/plane_eq.f
  src/fortran/planeeq.f
  src/fortran/planempc.f
  src/fortran/plastics.f
  src/fortran/plcopy.f
  src/fortran/plinterpol.f
  src/fortran/plmix.f
  src/fortran/pop.f
  src/fortran/postview.f
  src/fortran/precfd.f
  src/fortran/pretensionsections.f
  src/fortran/printout.f
  src/fortran/printoutelem.f
  src/fortran/printoutface.f
  src/fortran/printoutint.f
  src/fortran/printoutnode.f
  src/fortran/pt2_lim_calc.f
  src/fortran/pt2zpt1_crit.f
  src/fortran/push.f
  src/fortran/qsorti.f
  src/fortran/radiate.f
  src/fortran/radiates.f
  src/fortran/radmatrix.f
  src/fortran/radresult.f
  src/fortran/rcavi.f
  src/fortran/rcavi2.f
  src/fortran/rcavi_cp_lt.f
  src/fortran/rcavi_cp_nt.f
  src/fortran/readforce.f
  src/fortran/readview.f
  src/fortran/rearrange.f
  src/fortran/rectcyl.f
  src/fortran/rectcylexp.f
  src/fortran/rectcyltrfm.f
  src/fortran/rectcylvi.f
  src/fortran/restartread.f
  src/fortran/restarts.f
  src/fortran/restartshort.f
  src/fortran/restartwrite.f
  src/fortran/restrictor.f
  src/fortran/resultnet.f
  src/fortran/resultsem.f
  src/fortran/resultsforc.f
  src/fortran/resultsforcem.f
  src/fortran/resultsini.f
  src/fortran/resultsini_em.f
  src/fortran/resultsmech.f
  src/fortran/resultsprint.f
  src/fortran/resultstherm.f
  src/fortran/rhs.f
  src/fortran/rigidbodys.f
  src/fortran/rigidmpc.f
  src/fortran/rimseal.f
  src/fortran/rimseal_calc.f
  src/fortran/rs.f
  src/fortran/rubber.f
  src/fortran/scavenge_pump.f
  src/fortran/sdvini.f
  src/fortran/selectcyclicsymmetrymodess.f
  src/fortran/shape10tet.f
  src/fortran/shape14tet.f
  src/fortran/shape15w.f
  src/fortran/shape20h.f
  src/fortran/shape20h_ax.f
  src/fortran/shape20h_pl.f
  src/fortran/shape26h.f
  src/fortran/shape3l.f
  src/fortran/shape3tri.f
  src/fortran/shape4q.f
  src/fortran/shape4tet.f
  src/fortran/shape6tri.f
  src/fortran/shape6w.f
  src/fortran/shape7tri.f
  src/fortran/shape8h.f
  src/fortran/shape8hr.f
  src/fortran/shape8hu.f
  src/fortran/shape8q.f
  src/fortran/shape9q.f
  src/fortran/shellsections.f
  src/fortran/sigini.f
  src/fortran/skip.f
  src/fortran/slavintpoints.f
  src/fortran/solidsections.f
  src/fortran/sortev.f
  src/fortran/spcmatch.f
  src/fortran/specificgasconstants.f
  src/fortran/specificheats.f
  src/fortran/splitline.f
  src/fortran/springforc_f2f.f
  src/fortran/springforc_f2f_th.f
  src/fortran/springforc_n2f.f
  src/fortran/springforc_n2f_th.f
  src/fortran/springs.f
  src/fortran/springstiff_f2f.f
  src/fortran/springstiff_f2f_th.f
  src/fortran/springstiff_n2f.f
  src/fortran/springstiff_n2f_th.f
  src/fortran/statics.f
  src/fortran/steadystatedynamicss.f
  src/fortran/steps.f
  src/fortran/stiff2mat.f
  src/fortran/stop.f
  src/fortran/storeresidual.f
  src/fortran/str2mat.f
  src/fortran/straighteq2d.f
  src/fortran/straighteq3d.f
  src/fortran/straighteq3dpen.f
  src/fortran/straightmpc.f
  src/fortran/submodels.f
  src/fortran/subspace.f
  src/fortran/surfacebehaviors.f
  src/fortran/surfaceinteractions.f
  src/fortran/surfaces.f
  src/fortran/sutherland_hodgman.f
  src/fortran/swap.f
  src/fortran/tee.f
  src/fortran/temperatures.f
  src/fortran/tempload.f
  src/fortran/temploaddiff.f
  src/fortran/temploadmodal.f
  src/fortran/thermmodel.f
  src/fortran/tiefaccont.f
  src/fortran/ties.f
  src/fortran/timepointss.f
  src/fortran/transformatrix.f
  src/fortran/transforms.f
  src/fortran/treatmasterface.f
  src/fortran/trianeighbor.f
  src/fortran/triangucont.f
  src/fortran/triangulate.f
  src/fortran/triloc.f
  src/fortran/ts_calc.f
  src/fortran/tt_calc.f
  src/fortran/two_phase_flow.f
  src/fortran/twodint.f
  src/fortran/uamplitude.f
  src/fortran/uboun.f
  src/fortran/ufaceload.f
  src/fortran/uhardening.f
  src/fortran/umat.f
  src/fortran/umat_abaqus.f
  src/fortran/umat_abaqusnl.f
  src/fortran/umat_aniso_creep.f
  src/fortran/umat_aniso_plas.f
  src/fortran/umat_compression_only.f
  src/fortran/umat_elastic_fiber.f
  src/fortran/umat_ideal_gas.f
  src/fortran/umat_lin_iso_el.f
  src/fortran/umat_main.f
  src/fortran/umat_single_crystal.f
  src/fortran/umat_tension_only.f
  src/fortran/umat_user.f
  src/fortran/umatht.f
  src/fortran/umpc_dist.f
  src/fortran/umpc_gap.f
  src/fortran/umpc_mean_rot.f
  src/fortran/umpc_user.f
  src/fortran/uncoupledtemperaturedisplacements.f
  src/fortran/uout.f
  src/fortran/updatecont.f
  src/fortran/updatecont2d.f
  src/fortran/updatecontpen.f
  src/fortran/usermaterials.f
  src/fortran/usermpc.f
  src/fortran/utemp.f
  src/fortran/valuesatinfinitys.f
  src/fortran/viewfactors.f
  src/fortran/viscos.f
  src/fortran/vortex.f
  src/fortran/wcoef.f
  src/fortran/wpi.f
  src/fortran/writeboun.f
  src/fortran/writebv.f
  src/fortran/writeev.f
  src/fortran/writeevcomplex.f
  src/fortran/writeevcs.f
  src/fortran/writeevcscomplex.f
  src/fortran/writehe.f
  src/fortran/writeim.f
  src/fortran/writeinput.f
  src/fortran/writemac.f
  src/fortran/writemaccs.f
  src/fortran/writempc.f
  src/fortran/writepf.f
  src/fortran/writere.f
  src/fortran/writesummary.f
  src/fortran/writesummarydiv.f
  src/fortran/writetetmesh.f
  src/fortran/writeview.f
  src/fortran/wye.f
  src/fortran/zeta_calc.f
  src/fortran/zienzhu.f
  src/fortran/mafillv.f
)

set(CALCULIX_SRCS 
  src/expand.c
  src/arpack.c
  src/inicont.c
  src/v_betrag.c
  src/remastruct.c
  src/checkinclength.c
  src/nonlingeo.c
  src/radflowload.c
  src/checkconvergence.c
  src/complexfreq.c
  src/stos.c
  src/results.c
  src/strcpy1.c
  src/strcmp2.c
  src/tiedcontact.c
  src/compfluid.c
  src/frdset.c
  src/linstatic.c
  src/biosav.c
  src/mastruct.c
  src/stoi.c
  src/arpackcs.c
  src/readinput.c
  src/frdvector.c
  src/frdselect.c
  src/frecord.c
  src/electromagnetics.c
  src/preiter.c
  src/arpackbu.c
  src/mastructcs.c
  src/mastructem.c
  src/pardiso.c
  src/v_result.c
  src/dynacont.c
  src/insert.c
  src/cascade.c
  src/mastructrad.c
  src/getglobalresults.c
  src/compare.c
  src/spooles.c
  src/pcgsolver.c
  src/readfrd.c
  src/prediction_em.c
  src/frdcyc.c
  src/contact.c
  src/insertrad.c
  src/resultsinduction.c
  src/calcresidual.c
  src/storecontactdof.c
  src/dynboun.c
  src/strsplt.c
  src/sgi.c
  src/mastructf.c
  src/radcyc.c
  src/precontact.c
  src/dfdbj.c
  src/matrixstorage.c
  src/remastructem.c
  src/v_prod.c
  src/frdheader.c
  src/pardiso_as.c
  src/tau.c
  src/dyna.c
  src/writeBasisParameter.c
  src/frd.c
  src/calcresidual_em.c
  src/stof.c
  src/checkconvnet.c
  src/getSystemCPUs.c
  src/remastructar.c
  src/strcmp1.c
  src/elemChecker.c
  src/prediction.c
  src/u_calloc.c
  src/steadystate.c
)

add_library(calculix SHARED ${CALCULIX_SRCS} ${FORTRAN_SRCS})
# target_link_libraries(calculix -lspooles -lpthread -larpack -llapack -lblas -lm)

add_executable(ccx src/ccx_2.7.c)
target_link_libraries(ccx calculix -lspooles -larpack -llapack -lblas)

